- Add an escape parameter to fgetcsv to satisfy rfc4180 and bug #40501.